fix: update box shadow for vehicle card to enhance visibility and consistency in dark mode

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -33,9 +33,7 @@
   }
 
   .vehicle-card {
-    /* border-bottom: 1px solid #000000d0;
-    border-top: 1px solid #000000d0; */
-    box-shadow: 0px 2px 12px rgba(240, 239, 239, 0.897);
+    box-shadow: 0px 2px 12px #616060;
     padding: 10px;
     border-radius: 10px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -43,7 +41,7 @@
   }
   
   .dark-mode .vehicle-card {
-    box-shadow: 0px 2px 12px rgba(240, 239, 239, 0.897);
+    box-shadow: 0px 2px 12px #ccc;
   }
 
   .vehicle-card:last-child {
